--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<head land="en">
+<html>
+  <head land="en">
   <head>
     <title>New page!</title>
     <meta name="viewport" content="width=device-width, ititial-scale=1.0">
