--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
-  <head land="en">
-  <head>
-    <title>New page!</title>
-    <meta name="viewport" content="width=device-width, ititial-scale=1.0">
-  </head>
-  <body>
-    <h1>Very cool page</h1>
-    <p>Hello world!</p>
-  </body>
+<body>
+
+<p>This is a paragraph.</p>
+<p>This is a paragraph.</p>
+<p>This is a paragraph.</p>
+
+</body>
 </html>
