--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
+<!DOCTYPE html>
 <html>
-<body>
 
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
+<head>
+    <meta charset="utf-8" />
+    <title>test0</title>
+    <link href="lightStyle.css" rel="stylesheet">
+</head>
+
+<body>
+    <h1>test1</h1>
+
+    <h2>tes2</h2>
 
 </body>
+
 </html>
