--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>test0</title>
+    <title>building here👷‍♀️🚧 for real</title>
     <link href="lightStyle.css" rel="stylesheet">
 </head>
 
-<body>
-    <h1>test1</h1>
-
-    <h2>tes2</h2>
-
-</body>
+<body/>
 
 </html>
