--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>building here👷‍♀️🚧 for real</title>
+    <title>menu</title>
     <link href="lightStyle.css" rel="stylesheet">
 </head>
 
+<body>
+    building here👷‍♀️🚧 for real
 <body/>
 
 </html>
